implement HTML structure

--- a/index.html
+++ b/index.html
@@ -3,9 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz App</title>
+    <title>Color Palette Generator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+     <div class="container">
+        <h1>Color Palette Generator</h1>
+        <button id="generate-btn">
+            Generate Palette
+        </button>
+        <div class="palette" id="palette">
+            <div class="color-box">
+            <div class="color" style="background-color: #FF5733;"></div>
+            <div class="color-name">
+                <span class="color-hex">#FF5733</span>
+                <i class="copy-icon" title="Copy to clipboard">📋</i>
+            </div>
+            </div>
+            <div class="color-box">
+            <div class="color" style="background-color: #33C1FF;"></div>
+            <div class="color-name">
+                <span class="color-hex">#33C1FF</span>
+                <i class="copy-icon" title="Copy to clipboard">📋</i>
+            </div>
+            </div>
+            <div class="color-box">
+            <div class="color" style="background-color: #75FF33;"></div>
+            <div class="color-name">
+                <span class="color-hex">#75FF33</span>
+                <i class="copy-icon" title="Copy to clipboard">📋</i>
+            </div>
+            </div>
+            <div class="color-box">
+            <div class="color" style="background-color: #FF33A8;"></div>
+            <div class="color-name">
+                <span class="color-hex">#FF33A8</span>
+                <i class="copy-icon" title="Copy to clipboard">📋</i>
+            </div>
+            </div>
+            <div class="color-box">
+            <div class="color" style="background-color: #FFD133;"></div>
+            <div class="color-name">
+                <span class="color-hex">#FFD133</span>
+                <i class="copy-icon" title="Copy to clipboard">📋</i>
+            </div>
+            </div>
+        </div>    
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
