update color palette display: replace copy icon with image and enhance styles for better layout and hover effects

--- a/index.html
+++ b/index.html
@@ -17,35 +17,45 @@
             <div class="color" style="background-color: #FF5733;"></div>
             <div class="color-name">
                 <span class="color-hex">#FF5733</span>
-                <i class="copy-icon" title="Copy to clipboard">📋</i>
+                <i class="copy-icon" title="Copy to clipboard">
+                    <img src="copy-link.png" alt="Copy to clipboard" class="copy-img">
+                </i>
             </div>
             </div>
             <div class="color-box">
             <div class="color" style="background-color: #33C1FF;"></div>
             <div class="color-name">
                 <span class="color-hex">#33C1FF</span>
-                <i class="copy-icon" title="Copy to clipboard">📋</i>
+                <i class="copy-icon" title="Copy to clipboard">
+                    <img src="copy-link.png" alt="Copy to clipboard" class="copy-img">
+                </i>
             </div>
             </div>
             <div class="color-box">
             <div class="color" style="background-color: #75FF33;"></div>
             <div class="color-name">
                 <span class="color-hex">#75FF33</span>
-                <i class="copy-icon" title="Copy to clipboard">📋</i>
+                <i class="copy-icon" title="Copy to clipboard">
+                    <img src="copy-link.png" alt="Copy to clipboard" class="copy-img">
+                </i>
             </div>
             </div>
             <div class="color-box">
             <div class="color" style="background-color: #FF33A8;"></div>
             <div class="color-name">
                 <span class="color-hex">#FF33A8</span>
-                <i class="copy-icon" title="Copy to clipboard">📋</i>
+                <i class="copy-icon" title="Copy to clipboard">
+                    <img src="copy-link.png" alt="Copy to clipboard" class="copy-img">
+                </i>
             </div>
             </div>
             <div class="color-box">
             <div class="color" style="background-color: #FFD133;"></div>
             <div class="color-name">
                 <span class="color-hex">#FFD133</span>
-                <i class="copy-icon" title="Copy to clipboard">📋</i>
+                <i class="copy-icon" title="Copy to clipboard">
+                    <img src="copy-link.png" alt="Copy to clipboard" class="copy-img">
+                </i>
             </div>
             </div>
         </div>    
