fix: update stylesheet and script paths for correct loading

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color Palette Generator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
      <div class="container">
@@ -18,7 +18,7 @@
             <div class="color-name">
                 <span class="color-hex">#FF5733</span>
                 <i class="copy-icon" title="Copy to clipboard">
-                    <img src="copy-link.png" alt="Copy to clipboard" class="copy-img">
+                    <img src="./src/copy-link.png" alt="Copy to clipboard" class="copy-img">
                 </i>
             </div>
             </div>
@@ -27,7 +27,7 @@
             <div class="color-name">
                 <span class="color-hex">#33C1FF</span>
                 <i class="copy-icon" title="Copy to clipboard">
-                    <img src="copy-link.png" alt="Copy to clipboard" class="copy-img">
+                    <img src="./src/copy-link.png" alt="Copy to clipboard" class="copy-img">
                 </i>
             </div>
             </div>
@@ -36,7 +36,7 @@
             <div class="color-name">
                 <span class="color-hex">#75FF33</span>
                 <i class="copy-icon" title="Copy to clipboard">
-                    <img src="copy-link.png" alt="Copy to clipboard" class="copy-img">
+                    <img src="./src/copy-link.png"alt="Copy to clipboard" class="copy-img">
                 </i>
             </div>
             </div>
@@ -45,7 +45,7 @@
             <div class="color-name">
                 <span class="color-hex">#FF33A8</span>
                 <i class="copy-icon" title="Copy to clipboard">
-                    <img src="copy-link.png" alt="Copy to clipboard" class="copy-img">
+                    <img src="./src/copy-link.png" alt="Copy to clipboard" class="copy-img">
                 </i>
             </div>
             </div>
@@ -54,12 +54,12 @@
             <div class="color-name">
                 <span class="color-hex">#FFD133</span>
                 <i class="copy-icon" title="Copy to clipboard">
-                    <img src="copy-link.png" alt="Copy to clipboard" class="copy-img">
+                    <img src="./src/copy-link.png"alt="Copy to clipboard" class="copy-img">
                 </i>
             </div>
             </div>
         </div>    
     </div>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
